Added home button

--- a/src/autoinstall/linux.html
+++ b/src/autoinstall/linux.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/render.css">
 </head>
@@ -17,7 +19,7 @@
     <p id="commandText" style="text-align: center;margin: 1vw;">Command Text Here</p>
     <div class="row">
         <div class="col" style="text-align: center;"><button class="btn btn-primary" id="installButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);">Install</button></div>
-    </div><script>exports = {} </script>
+    </div><a class="home-button" href="../menu/index.html"><i class="fa fa-home" style="color: var(--mm-button-background);font-size: 32px;"></i></a><script>exports = {} </script>
 <script src='linux.js'></script>
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
