--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="../assets/css/Google-Style-Text-Input.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/cc.css">
@@ -24,7 +26,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div id="canvas" style="margin-left: 1vw;"></div>
+            <div id="canvas" style="margin-left: 1vw;margin-top: 10vw;"></div>
         </div>
         <div class="col" style="min-height: 20vw;margin-top: 10vw;">
             <form id="form" class="poseSettings"><div class="group">      
@@ -60,7 +62,7 @@
 <button class="btn btn-primary submit-button" id="addPoseButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);margin-top: 0px;">Add Pose</button>
             </form>
         </div>
-    </div><button class="btn btn-primary submit-button" id="savePosesButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);margin-top: 0px;margin-left: 1vw;">Save</button><script>exports={}</script>
+    </div><button class="btn btn-primary submit-button" id="savePosesButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);margin-top: 0px;margin-left: 1vw;">Save</button><a class="home-button" href="../menu/index.html"><i class="fa fa-home" style="color: var(--mm-button-background);font-size: 32px;"></i></a><script>exports={}</script>
 <script src="cc.js"></script>
 <script src="p5.min.js"></script>
 
