--- a/src/autoinstall/windows.html
+++ b/src/autoinstall/windows.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/render.css">
 </head>
@@ -32,7 +34,7 @@
             <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="downloadFFmpeg" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Download FFmpeg</button></div>
             <div class="container" style="/*height: 70px;*/"><button class="btn btn-primary" id="pathFFmpeg" type="button" style="background: var(--mm-button-background);color: var(--mm-button-color);">Add FFmpeg to Path</button></div>
         </div>
-    </div>    <script>exports={}</script>
+    </div><a class="home-button" href="../menu/index.html"><i class="fa fa-home" style="color: var(--mm-button-background);font-size: 32px;"></i></a>    <script>exports={}</script>
     <script src='windows.js'></script>
     <script defer>
         window.$ = window.jQuery = require('jquery');
