--- a/src/timestamps/timestamps.html
+++ b/src/timestamps/timestamps.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap">
     <link rel="stylesheet" href="../assets/css/Momcake.css">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/render.css">
     <link rel="stylesheet" href="../assets/css/timestamps.css">
@@ -35,7 +37,7 @@
     <div class="row" style="width: max(400px, 30vw);">
         <div class="col"><button class="btn btn-primary" id="animateThis" type="button" style="margin-left: 1vw;color: var(--mm-button-color);background: var(--mm-button-background);">Animate This</button></div>
         <div class="col"><button class="btn btn-primary" id="saveThis" type="button" style="margin-left: 1vw;color: var(--mm-button-color);background: var(--mm-button-background);">Save</button></div>
-    </div>    <script>exports={}</script>
+    </div><a class="home-button" href="../menu/index.html"><i class="fa fa-home" style="color: var(--mm-button-background);font-size: 32px;"></i></a>    <script>exports={}</script>
     <script src='audioBox.js'></script>
     <script defer>
         window.$ = window.jQuery = require('jquery');
