character button works

--- a/src/render/render.html
+++ b/src/render/render.html
@@ -33,7 +33,7 @@
             savePath('output', {defaultPath: 'myAnimation.mov', filters: [{name: 'Video File',extensions:['mp4', 'mov']}]}) 
         });
         
-       $("#timestampsBtn").on("click", ()=>{
+       $("#characterBtn").on("click", ()=>{
             uploadPath('character', {filters: [{name: 'Character File',extensions:['json']}]}) 
         });
         
