cc save button sticky to bottom

--- a/src/character-creator/cc.html
+++ b/src/character-creator/cc.html
@@ -62,7 +62,7 @@
 <button class="btn btn-primary submit-button" id="addPoseButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);margin-top: 0px;">Add Pose</button>
             </form>
         </div>
-    </div><button class="btn btn-primary submit-button" id="savePosesButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);margin-top: 0px;margin-left: 1vw;">Save</button><a class="home-button" href="../menu/index.html"><i class="fa fa-home" style="color: var(--mm-button-background);font-size: 32px;"></i></a><script>exports={}</script>
+    </div><button class="btn btn-primary submit-button" id="savePosesButton" type="button" style="color: var(--mm-button-color);background: var(--mm-button-background);margin-top: 0px;margin-left: 1vw;  position: fixed; bottom: 1vw; left: 4vw;">Save</button><a class="home-button" href="../menu/index.html"><i class="fa fa-home" style="color: var(--mm-button-background);font-size: 32px;"></i></a><script>exports={}</script>
 <script src="cc.js"></script>
 <script src="p5.min.js"></script>
 
