--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -38,7 +38,7 @@
       <strong>Matamata</strong> Studio
     </h1>
     <div class="row">
-      <div class="col-auto mx-auto">
+      <div class="menu-buttons-flex-cont">
         <a class="menu-button" href="../autoinstall/decider.html"
           ><button
             class="btn btn-primary"
@@ -86,6 +86,20 @@
             title="Easily install app dependancies"
           >
             Render Video
+          </button></a
+        >
+
+        <a class="menu-button" href="../extras/extras.html"
+          ><button
+            class="btn btn-primary"
+            type="button"
+            style="
+              background: var(--mm-button-background);
+              color: var(--mm-button-color);
+            "
+            title="Many more useful features for video creation. These are used by but not created by the Matamata team."
+          >
+            Extras
           </button></a
         >
       </div>
