--- a/src/extras/extras.html
+++ b/src/extras/extras.html
@@ -18,31 +18,22 @@
 </head>
 
 <body>
-  <div class="col" style="text-align: center">
-    <p>
-      This is an assortment of tools that are useful for video creation.
-      These are used by but not created by the Matamata team. An internet connection may be required.
-    </p>
-    <div class="flex-cont" id='cards'>
-      <div class="w3-card-4 card" style="background-color: var(--mm-selection);"
-        onclick="window.open('https://www.w3schools.com')">
-        <img src="thumbnails/photopea.png">
-        <div class="w3-container w3-center">
-          <p><strong>Title</strong></p>
-          <p>Description</p>
-        </div>
-      </div>
+  <p class='intro'>
+    This is an assortment of tools that are useful for video creation.
+    These are used by but not created by the Matamata team. An internet connection may be required. An asterisk
+    indicates that an account may be required.
+  </p>
+  <div class="flex-cont" id='cardDeck'>
 
+  </div>
 
-    </div>
-
-    <a class="home-button" href="../menu/index.html"><i class="fa fa-home"
-        style="color: var(--mm-button-background); font-size: 32px"></i></a>
-    <script>
-      exports = {};
-    </script>
-    <script src='extras.js'></script>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+  <a class="home-button" href="../menu/index.html"><i class="fa fa-home"
+      style="color: var(--mm-button-background); font-size: 32px"></i></a>
+  <script>
+    exports = {};
+  </script>
+  <script src='extras.js'></script>
+  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
