--- a/src/extras/extras.html
+++ b/src/extras/extras.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <title>Matamata Desktop</title>
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap"
+    />
+    <link rel="stylesheet" href="../assets/css/Momcake.css" />
+    <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/fonts/fontawesome5-overrides.min.css"
+    />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/extras.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Matamata Desktop</title>
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&amp;display=swap" />
-  <link rel="stylesheet" href="../assets/css/Momcake.css" />
-  <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css" />
-  <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css" />
-  <link rel="stylesheet" href="../assets/fonts/fontawesome5-overrides.min.css" />
-  <link rel="stylesheet" href="../assets/css/styles.css" />
-  <link rel="stylesheet" href="../assets/css/extras.css" />
+  <body>
+    <p class="intro">
+      This is an assortment of tools that are useful for video creation. These
+      are used by but not created by the Matamata team. An internet connection
+      may be required.
+    </p>
+    <div class="flex-cont" id="cardDeck"></div>
 
-</head>
-
-<body>
-  <p class='intro'>
-    This is an assortment of tools that are useful for video creation.
-    These are used by but not created by the Matamata team. An internet connection may be required. An asterisk
-    indicates that an account may be required.
-  </p>
-  <div class="flex-cont" id='cardDeck'>
-
-  </div>
-
-  <a class="home-button" href="../menu/index.html"><i class="fa fa-home"
-      style="color: var(--mm-button-background); font-size: 32px"></i></a>
-  <script>
-    exports = {};
-  </script>
-  <script src='extras.js'></script>
-  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-</body>
-
+    <p style="position: absolute; bottom: 0px; left: 50%; text-align: center">
+      * Account Required
+    </p>
+    <a class="home-button" href="../menu/index.html"
+      ><i
+        class="fa fa-home"
+        style="color: var(--mm-button-background); font-size: 32px"
+      ></i
+    ></a>
+    <script>
+      exports = {};
+    </script>
+    <script src="extras.js"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+  </body>
 </html>
