--- a/src/render/render.html
+++ b/src/render/render.html
@@ -174,7 +174,7 @@
       exports = {};
     </script>
     <script src="render.js"></script>
-    <script defer>
+    <script>
       window.$ = window.jQuery = require("jquery");
 
       $("#audioBtn").on("click", () => {
