--- a/src/menu/index.html
+++ b/src/menu/index.html
@@ -29,12 +29,7 @@
   </h1>
   <div class="row">
     <div class="menu-buttons-flex-cont">
-      <a class="menu-button" href="../autoinstall/decider.html"><button class="btn btn-primary" type="button" style="
-              background: var(--mm-button-background);
-              color: var(--mm-button-color);
-            " title="Easily install app dependancies">
-          Install Requirements
-        </button></a><a class="menu-button" href="../character-creator/cc.html"><button class="btn btn-primary"
+    <a class="menu-button" href="../character-creator/cc.html"><button class="btn btn-primary"
           type="button" style="
               background: var(--mm-button-background);
               color: var(--mm-button-color);
